[gd_scene load_steps=6 format=3 uid="uid://cs08dwnrlb8sc"]

[ext_resource type="Script" path="res://_common/game_menu.gd" id="1_v01kx"]
[ext_resource type="Theme" uid="uid://twbyj3fev8td" path="res://_common/main_theme.tres" id="2_0lc5h"]
[ext_resource type="Script" path="res://_common/game_data_selection.gd" id="3_yy1av"]
[ext_resource type="Resource" uid="uid://bw04mqbcds5s" path="res://game_data/tutorial_game_data.tres" id="4_plwcl"]
[ext_resource type="Resource" uid="uid://mrnelixwcvbm" path="res://game_data/player_game_data.tres" id="5_2uifc"]

[node name="StartMenu" type="Node2D"]
script = ExtResource("1_v01kx")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_0lc5h")

[node name="Name" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Airship ONE"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="StartGame" type="Button" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Start Game"

[node name="EditObjectives" type="Button" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Edit Objectives"

[node name="GameDataOptions" type="OptionButton" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
selected = 2
item_count = 3
popup/item_0/text = "MySave"
popup/item_1/text = "Tutorial"
popup/item_1/id = 2
popup/item_2/text = "Debug"
popup/item_2/id = 1
script = ExtResource("3_yy1av")
player_game_data = ExtResource("5_2uifc")
tutorial_game_data = ExtResource("4_plwcl")
debug_game_data = ExtResource("5_2uifc")

[node name="Exit" type="Button" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Exit"

[node name="Control" type="Control" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[connection signal="pressed" from="CanvasLayer/VBoxContainer/GridContainer/StartGame" to="." method="_load_world"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/GridContainer/EditObjectives" to="." method="_load_objective_grid_editor"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/GridContainer/Exit" to="." method="_exit_game"]
